Fixed quiz image matching question image covering the matching words issue

--- a/assets/css/tutor-front.css
+++ b/assets/css/tutor-front.css
@@ -2038,6 +2038,7 @@ Course question and answer
 .quiz-draggable-rand-answers {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 80px;
 }
 
 .drop-hover {
