--- a/assets/scss/_single_lesson.scss
+++ b/assets/scss/_single_lesson.scss
@@ -1304,11 +1304,9 @@ Course question and answer
     flex: 1;
 }
 .quiz-draggable-rand-answers{
-
-
     display: flex;
-
     flex-wrap: wrap;
+    margin-bottom: 80px;
 }
 .drop-hover{
     display: none;
